# dune-dbt-template

./: .env.example  .envrc.example  .gitignore  .user.yml  CHANGELOG.md  QUICKSTART.md  README.md  SETUP_FOR_NEW_TEAMS.md  WORKFLOW.md  dbt_project.yml  profiles.yml  profiles.yml.example  profiles_example_file.yml  pyproject.toml
.cursor/rules/: dbt-best-practices.mdc  sql-style-guide.mdc
.github/workflows/: dbt_ci.yml  dbt_deploy.yml  dbt_manifest_build.yml  dbt_manifest_generate.yml  dbt_manifest_refresh.yml  dbt_prod.yml  dbt_run.yml
docs/: cicd.md  dbt-best-practices.md  development-workflow.md  getting-started.md  testing.md  troubleshooting.md
macros/: get_custom_schema.sql
macros/dune_dbt_overrides/: get_custom_schema.sql  schema.sql  source.sql
models/: _schema.yml  dbt_template_incremental_model.sql  dbt_template_table_model.sql  dbt_template_view_model.sql  example_view_model.sql
models/blockworks/solana/: _schema.yml  _sources.yml
models/blockworks/solana/humidifi/: humidifi_solana_pools.sql  humidifi_solana_trades.sql
models/interviews/: _schema.yml  uniswap_v3_trades.sql
models/templates/: _schema.yml  _sources.yml  dbt_template_append_incremental_model.sql  dbt_template_delete_insert_incremental_model.sql  dbt_template_incremental_model.sql  dbt_template_merge_incremental_model.sql  dbt_template_table_model.sql  dbt_template_view_model.sql
scripts/: activate-trino-cluster.sh
