[project]
name = "dune-dbt-template"
version = "0.1.0"
description = "A dbt project template with Trino adapter and uv dependency management"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-trino>=1.9.3",
]

[project.scripts]
dbt = "dbt.cli.main:cli"

[tool.uv]
package = false

[dependency-groups]
dev = []
